openshift/ftest-openshift-resources-standalone/src/test/resources/hello-route-2.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world-2
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello-world
