openshift/ftest-openshift-resources-standalone/src/test/resources/hello-route.json
{
  "apiVersion": "v1",
  "kind": "Route",
  "metadata": {
    "name": "hello-world"
  },
  "spec": {
    "port": {
      "targetPort": 8080
    },
    "to": {
      "kind": "Service",
      "name": "hello-world"
    }
  }
}
